--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Website Pop Mart</title>
     <link rel="stylesheet" href="css/cssproject.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="foto/logo.jpg">
 </head>
 <body>
   <header>
